--- a/dermacart/templates/login & sign up/login.html
+++ b/dermacart/templates/login & sign up/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Login & Signup</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../../static/css/login & sign up/login.css">
 </head>
 <body>
   <div class="container">
